--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 </head>
 <body>
   <header>Retro Bowl</header>
-<iframe src="https://3kh0.github.io/retro-bowl/" allowfullscreen></iframe>
+<iframe src="https://bowlretro.github.io/" allowfullscreen style="width:100vw; height:100vh; border:none;"></iframe>
 </body>
 </html>
